# owme-listing-notifier

./: .gitignore  .timetracker  README.md  gmail.py  local_main.py  main.py  main_local.py  main_production.py  message.txt  owme.py  pyproject.toml  requirements.txt  test_app.py  test_owme.py  whatsapp.py
owme/: __init__.py  models.py  notifications.py  owme.py
owme/notifier/: __init__.py  dbmodels.py  notifier.py
